[gd_scene load_steps=23 format=3 uid="uid://dvr6bm2hlj5h4"]

[ext_resource type="Script" uid="uid://capm81lvak2c3" path="res://tank/tank.gd" id="1_0iy80"]
[ext_resource type="Script" uid="uid://iirywjtssovs" path="res://tank/tank_body.gd" id="2_o5qn2"]
[ext_resource type="PackedScene" uid="uid://bfovdi5eowpoe" path="res://items/collectible_item.tscn" id="2_qlwk0"]
[ext_resource type="Curve" uid="uid://jlsv4hedfkw7" path="res://tank/max_power_v_health.tres" id="3_6i2oc"]
[ext_resource type="Curve" uid="uid://b18ca2qbmkjvy" path="res://tank/aim_deviation_v_health.tres" id="4_cvubm"]
[ext_resource type="Material" uid="uid://b80y1iuls3wmg" path="res://tank/tank_damage.tres" id="5_16yu1"]
[ext_resource type="Texture2D" uid="uid://m7e1fhio7k6v" path="res://tank/artillery-base.png" id="7_dewsc"]
[ext_resource type="PackedScene" uid="uid://8ypb526keg0k" path="res://weapons/weapon_trajectory_previewer.tscn" id="7_hqpr6"]
[ext_resource type="Script" uid="uid://cu7a4bvlikg2j" path="res://tank/fall_damage_causer.gd" id="8_5poe7"]
[ext_resource type="Texture2D" uid="uid://bifkhqeyaoopt" path="res://tank/artillery-turret.png" id="8_73k0t"]
[ext_resource type="PackedScene" uid="uid://eqdcshl1me76" path="res://effects/smoke_particles.tscn" id="8_adwvx"]
[ext_resource type="Texture2D" uid="uid://b1rtks5mrjg34" path="res://tank/spotlight.png" id="9_73k0t"]
[ext_resource type="PackedScene" uid="uid://c2yvcwfpdhnvx" path="res://weapons/weapon_beam_trajectory_previewer.tscn" id="9_ucdxg"]
[ext_resource type="PackedScene" uid="uid://c7gtykfc1h1xq" path="res://effects/day_weather_react.tscn" id="10_yxfy5"]
[ext_resource type="Script" uid="uid://bybxweqiag1x8" path="res://items/weapon_projectiles/explosions/emp_discharger.gd" id="12_0knov"]
[ext_resource type="PackedScene" uid="uid://b15v5mova33di" path="res://items/weapon_projectiles/weapon_projectile_emp_widespread.tscn" id="13_sdcn4"]
[ext_resource type="Texture2D" uid="uid://5fotp567tkxb" path="res://items/weapon_projectiles/parachute.png" id="14_sdcn4"]
[ext_resource type="Texture2D" uid="uid://lq7jojr8mwke" path="res://items/weapon_projectiles/parachute-backpack.png" id="18_yldis"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1pofo"]
friction = 100.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dewsc"]
polygon = PackedVector2Array(-6, -8, -2, -11, 5, -11, 10, -8, 10, 0, 8, 4, 8, 10, -9, 10, -10, 7, -7, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqqyu"]
size = Vector2(26, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbvof"]
size = Vector2(6, 30.8)

[node name="Tank" type="Node2D" node_paths=PackedStringArray("shooting_trajectory_previewer", "beam_trajectory_indicator", "lights") groups=["Damageable", "DamageableRoot", "Unit"]]
texture_filter = 6
script = ExtResource("1_0iy80")
drop_on_death = ExtResource("2_qlwk0")
shooting_trajectory_previewer = NodePath("WeaponTrajectoryPreviewer")
beam_trajectory_indicator = NodePath("WeaponBeamTrajectoryPreviewer")
lights = [NodePath("TankBody/TankTurret/Spotlight"), NodePath("TankBody/PointLight2D"), NodePath("TankBody/PointLight2D2")]
max_power_v_health = ExtResource("3_6i2oc")
aim_deviation_v_health = ExtResource("4_cvubm")
damage_material = ExtResource("5_16yu1")
activate_parachute_min_damage = 5.0

[node name="TankBody" type="RigidBody2D" parent="."]
use_parent_material = true
collision_mask = 255
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_1pofo")
center_of_mass_mode = 1
center_of_mass = Vector2(0, -300)
lock_rotation = true
freeze_mode = 1
script = ExtResource("2_o5qn2")
sleep_linear_velocity_threshold = 0.1
sleep_angular_threshold = 0.0174533

[node name="TankBodySprite" type="Sprite2D" parent="TankBody"]
use_parent_material = true
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_dewsc")

[node name="LightOccluder2D" type="LightOccluder2D" parent="TankBody/TankBodySprite"]
show_behind_parent = true
scale = Vector2(10, 10)
occluder = SubResource("OccluderPolygon2D_dewsc")
sdf_collision = false

[node name="TankBodyCollision" type="CollisionShape2D" parent="TankBody"]
shape = SubResource("RectangleShape2D_qqqyu")

[node name="TankTurret" type="Area2D" parent="TankBody"]
z_index = -1
use_parent_material = true
position = Vector2(0, -8.86)
collision_mask = 15

[node name="TurretSprite" type="Sprite2D" parent="TankBody/TankTurret"]
use_parent_material = true
position = Vector2(0.2, -10.88)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_73k0t")

[node name="TurretCollision" type="CollisionShape2D" parent="TankBody/TankTurret"]
position = Vector2(0.2, -11.28)
shape = SubResource("RectangleShape2D_bbvof")

[node name="WeaponFireLocation" type="Marker2D" parent="TankBody/TankTurret"]
position = Vector2(0, -33.14)
rotation = -1.5708

[node name="Spotlight" type="PointLight2D" parent="TankBody/TankTurret"]
visible = false
position = Vector2(0, -20)
energy = 0.66
range_item_cull_mask = 3
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 4.0
shadow_item_cull_mask = 5
texture = ExtResource("9_73k0t")
offset = Vector2(0, -187.5)
texture_scale = 0.75

[node name="Bottom" type="Marker2D" parent="TankBody"]
position = Vector2(0, 13)

[node name="Left" type="Marker2D" parent="TankBody"]
position = Vector2(-13, 0)

[node name="Right" type="Marker2D" parent="TankBody"]
position = Vector2(13, 0)

[node name="Top" type="Marker2D" parent="TankBody"]
position = Vector2(0, -13)

[node name="PointLight2D" type="PointLight2D" parent="TankBody"]
position = Vector2(-12, -10)
rotation = -1.5708
energy = 0.55
texture = ExtResource("9_73k0t")
offset = Vector2(0, -51)
texture_scale = 0.25

[node name="PointLight2D2" type="PointLight2D" parent="TankBody"]
position = Vector2(18, -10)
rotation = 1.5708
energy = 0.45
texture = ExtResource("9_73k0t")
offset = Vector2(0, -50)
texture_scale = 0.25

[node name="DayWeatherReact" parent="TankBody" node_paths=PackedStringArray("lights") instance=ExtResource("10_yxfy5")]
lights = [NodePath("../TankTurret/Spotlight"), NodePath("../PointLight2D"), NodePath("../PointLight2D2")]

[node name="RemoteTransform2DforSmoke" type="RemoteTransform2D" parent="TankBody"]
remote_path = NodePath("../../DamagedSmokeParticles")
update_scale = false

[node name="FiredWeaponContainer" type="Node" parent="."]

[node name="WeaponTrajectoryPreviewer" parent="." groups=["TrajectoryPreviewer"] instance=ExtResource("7_hqpr6")]
emit_action_signals = false

[node name="WeaponBeamTrajectoryPreviewer" parent="." groups=["TrajectoryPreviewer"] instance=ExtResource("9_ucdxg")]
emit_action_signals = false

[node name="FallDamageCauser" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_5poe7")
metadata/_custom_type_script = "uid://cu7a4bvlikg2j"

[node name="EMPDischarger" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("12_0knov")
target = NodePath("..")
scene_to_spawn = ExtResource("13_sdcn4")

[node name="DamagedSmokeParticles" parent="." instance=ExtResource("8_adwvx")]
unique_name_in_owner = true
emitting = false

[node name="ParachuteGroup" type="Node2D" parent="."]

[node name="Parachute" type="Sprite2D" parent="ParachuteGroup"]
unique_name_in_owner = true
visible = false
z_index = -2
position = Vector2(-1, -34)
texture = ExtResource("14_sdcn4")

[node name="ParachuteBackpack" type="Sprite2D" parent="ParachuteGroup"]
unique_name_in_owner = true
visible = false
z_index = -10
position = Vector2(11, -3)
scale = Vector2(0.333, 0.333)
texture = ExtResource("18_yldis")

[node name="ParachuteActivationTimer" type="Timer" parent="ParachuteGroup"]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="ParachuteGroup/ParachuteActivationTimer" to="." method="_on_parachute_activation_timer_timeout"]
